; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/ndis/extr_subr_hal.c_KfRaiseIrql.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/ndis/extr_subr_hal.c_KfRaiseIrql.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@.str = private unnamed_addr constant [28 x i8] c"IRQL_NOT_LESS_THAN_OR_EQUAL\00", align 1
@DISPATCH_LEVEL = common dso_local global i64 0, align 8
@disp_lock = common dso_local global i32* null, align 8
@curthread = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @KfRaiseIrql(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = call i32 (...) @sched_pin()
  %5 = call i64 (...) @KeGetCurrentIrql()
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* %2, align 8
  %8 = icmp sgt i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = call i32 @panic(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %1
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* @DISPATCH_LEVEL, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %22

15:                                               ; preds = %11
  %16 = load i32*, i32** @disp_lock, align 8
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curthread, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = getelementptr inbounds i32, i32* %16, i64 %19
  %21 = call i32 @mtx_lock(i32* %20)
  br label %24

22:                                               ; preds = %11
  %23 = call i32 (...) @sched_unpin()
  br label %24

24:                                               ; preds = %22, %15
  %25 = load i64, i64* %3, align 8
  ret i64 %25
}

declare dso_local i32 @sched_pin(...) #1

declare dso_local i64 @KeGetCurrentIrql(...) #1

declare dso_local i32 @panic(i8*) #1

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @sched_unpin(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
